Decoder corrected